fixed title letter spacing

--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,7 @@ main {
   font-size: 70px;
   color: #fff;
   text-align: center;
+  letter-spacing: 0.5em;
 }
 
 .banner-text-subtitle {
